<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:background="@drawable/gradient_bg_blue"
    android:padding="16dp">

    <TextView
        android:id="@+id/userRank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:text="100th"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="24dp"
        android:text="860pts"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Leaderboard"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <TextView-->
<!--        android:id="@+id/userName"-->
<!--        android:layout_width="54dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginTop="36dp"-->
<!--        android:text="Name"-->
<!--        android:textColor="@android:color/white"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/userPoints"-->
<!--        app:layout_constraintHorizontal_bias="0.508"-->
<!--        app:layout_constraintStart_toEndOf="@+id/userRank"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/headerTitle" />-->
</androidx.constraintlayout.widget.ConstraintLayout>
