...
            android:gravity="center_horizontal"
            android:layout_marginBottom="70dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/leaderboardRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"/>
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
...
