...
    <string name="app_name">neuroflex</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Create an account</string>f
    <string name="full_name">Full name</string>
    <string name="click_to_login">Already have an account? Login here</string>
    <string name="click_to_register">Don\'t have an account yet? Register here</string>
    <string name="logout">Logout</string>
    <string name="name_here">Name here.</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="home">Home</string>
...
    <string name="today_s_game_pick">Today\'s game pick</string>
    <string name="featured">Featured</string>
    <string name="button_function">Click to flip the card</string>
    <string name="card_back">cardBack</string>
    <string name="neuroflex">NeuroFlex</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_email">Login with email</string>
    <string name="create_account">Create account</string>
    <string name="desc_reg">Create an account to begin training your brain and save progress.</string>
    <string name="descLogin">Welcome back! We have missed you.</string>
    <string name="forgot_password">Forgot password</string>
    <string name="score_label">Score</string>
    <string name="score_value">0</string>
...
