...
            android:textSize="43sp"
            />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button_white"
            android:text="@string/login_with_email"
            android:textAllCaps="false"
...
